--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^13.1.6",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "antlr4ts": "^0.5.0-alpha.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
@@ -19,6 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "antlr4ts": "cd src/grammar/ && antlr4ts CalcLexer.g4 -o ../generated && antlr4ts -no-listener -no-visitor CalcParser.g4 -o ../generated",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "antlr4ts-cli": "^0.5.0-alpha.3"
   }
 }
